# bevy_boids

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yaml  md.yaml  release.yaml
src/: lib.rs
